--- a/app/assets/stylesheets/redesign/layout/_forms.css.scss
+++ b/app/assets/stylesheets/redesign/layout/_forms.css.scss
@@ -1,4 +1,10 @@
-// Form controls
+label {
+  font-weight: normal;
+  font-family: $headings-font-family;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  color: $gray-light;
+}
 
 // styleguide 
 .form-control {
@@ -62,7 +68,7 @@
 // @end styleguide
 // -----------------
 
-
+// Form controls
 // - dirty fix for that -> http://note.io/1EfCAKk
 .form-control {
   height: 61px;
@@ -91,70 +97,6 @@
   @extend .form-control-md;
 }
 // @end Form controls
-// ------------------
-
-// Buttons
-.btn {
-  font-family: $font-family-secondary;
-}
-// - reset default buttons styles
-.btn-reset {
-  border: 0;
-  background: none;
-}
-// - text
-.btn-text {
-  cursor: default;
-  color: inherit;
-  &:hover { color: inherit;}
-  &:active { box-shadow: none;}
-}
-// - button with height 45px
-.btn-md {
-  padding-top: 9px;
-  padding-bottom: 9px;
-  min-height: $form-control-height-md;
-  &.btn-white {
-    font-size: inherit;
-  }
-}
-// - facebook
-.btn-facebook {
-  background-color: #3b5998;
-
-  position: relative;
-  color: #fff;
-  &:before {
-    content: '\f09a';
-    font: normal normal normal 24px 'FontAwesome';
-    background-color: #354f88;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    text-align: center;
-  }
-
-  span {
-    font-size: 12px;
-  }
-
-  &.btn-md {
-    padding-left: (2 * $form-control-height-md);
-    &:before {
-      width: $form-control-height-md;
-      line-height: $form-control-height-md;
-    }
-    &.btn-block {
-      padding-left: $form-control-height-md;
-    }
-  }
-
-  &.btn-block {
-    padding-right: 0;
-  }
-}
-// @end Buttons
 // ------------------
 
 // Checkbox right side
@@ -236,29 +178,9 @@
 .btn-group-radio input[type=radio]:checked + .btn label {
   color: #fff;
 }
-// @end
 
-.decorated{
-     overflow: hidden;
-     text-align: center;
- }
-.decorated > span{
-    position: relative;
-    display: inline-block;
-}
-.decorated > span:before, .decorated > span:after{
-    content: '';
-    position: absolute;
-    top: 50%;
-    border-bottom: 2px solid;
-    width: 591px; /* half of limiter*/
-    margin: 0 20px;
-}
-.decorated > span:before{
-    right: 100%;
-}
-.decorated > span:after{
-    left: 100%;
+.form-group {
+  margin-bottom: 30px;
 }
 
 .btn-group-radio > .btn > label.credit  {
