--- a/app/assets/stylesheets/redesign/styleguide/styles.scss
+++ b/app/assets/stylesheets/redesign/styleguide/styles.scss
@@ -12,10 +12,10 @@
 // @import "bootstrap";
 
 // @import "grid";
-@import "overrides";
+// @import "overrides";
 // @import "typography";
 // @import "modules";
-@import "buttons";
+// @import "buttons";
 // @import "footer";
 // @import "nav";
 // @import "mobile-menu";
@@ -196,10 +196,10 @@
 	margin: 0 auto;
 }
 
-.black-form {
-	background: transparent;
-	border-color: black;
-}
+// .black-form {
+// 	background: transparent;
+// 	border-color: black;
+// }
 
 .email-signup-form {
 	width: 350px !important;
