--- a/app/views/products/details/_side_panel_making_options.html.slim
+++ b/app/views/products/details/_side_panel_making_options.html.slim
@@ -13,10 +13,10 @@
         h2 = option.name
         p
           ' Get your dress made within 48h
-        a.btn.btn-block.btn-secondary.making-option href="#" data-id=option.id data-name=option.name data-price=option.display_price
+        a.btn.btn-block.btn-blue.making-option href="#" data-id=option.id data-name=option.name data-price=option.display_price
           = "+#{ option.display_price }"
     .production-time-box
       h2 Standard
       p Get your dress made in 2-5 business days
-      a.btn.btn-block.btn-secondary.making-option data-id="original" data-name="original" data-price=""
+      a.btn.btn-block.btn-blue.making-option data-id="original" data-name="original" data-price=""
         | +$0
