--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -122,11 +122,11 @@ ruby:
 
     .row.secondary-actions
       .col-md-6.col-xs-6.col-xxs-12
-        button#fit-guide.btn.btn-block.btn-secondary Fit Guide
+        button#fit-guide.btn.btn-block.btn-blue Fit Guide
 
       .col-md-6.col-xs-6.col-xxs-12
         - if Features.active?(:moodboard)
-          button#add-to-moodboard.btn.btn-block.btn-secondary data-user-present=current_spree_user.present?
+          button#add-to-moodboard.btn.btn-block.btn-blue data-user-present=current_spree_user.present?
             |+ Moodboard
 
 /! About The Dress
