--- a/app/views/spree/checkout/_order_summary.html.slim
+++ b/app/views/spree/checkout/_order_summary.html.slim
@@ -61,7 +61,7 @@ ruby:
     .input-group
       input.form-control.form-control-md#promotion-code type="text"
       span.input-group-addon
-        button.btn-submit.btn-reset Apply
+        button.btn-submit.btn-transparent Apply
 
   / hr
   p
