--- a/app/views/spree/user_registrations/new.html.slim
+++ b/app/views/spree/user_registrations/new.html.slim
@@ -10,7 +10,7 @@
     .row
       .col-md-8
         h2.checkout-section-title Create an account to save your dress to a Moodboard to discover your Style Profile, share with friends and to manage your profile. Its easy just enter some basic details!
-        = link_to fb_auth_path(signup_params), class: 'btn btn-facebook btn-block btn-black btn-md fb-login' do
+        = link_to fb_auth_path(signup_params), class: 'btn btn-facebook btn-block fb-login' do
 
           span Sign up with facebook
 
