--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,8 +1,53 @@
-// Include Gems 
 @import 'font-awesome';
+// Include bootstrap
+@import 'bootstrap/variables';
 @import 'redesign/styleguide/bootstrap-variables';
-@import 'bootstrap';
-// @end Include Gems
+@import "bootstrap/mixins";
+// Reset and dependencies
+@import "bootstrap/normalize";
+@import "bootstrap/print";
+@import "bootstrap/glyphicons";
+// Core CSS
+@import "bootstrap/scaffolding";
+@import "bootstrap/type";
+@import "bootstrap/code";
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+// Components
+@import "bootstrap/component-animations";
+@import "bootstrap/dropdowns";
+@import "bootstrap/button-groups";
+@import "bootstrap/input-groups";
+@import "bootstrap/navs";
+@import "bootstrap/navbar";
+@import "bootstrap/breadcrumbs";
+@import "bootstrap/pagination";
+@import "bootstrap/pager";
+@import "bootstrap/labels";
+@import "bootstrap/badges";
+@import "bootstrap/jumbotron";
+@import "bootstrap/thumbnails";
+@import "bootstrap/alerts";
+@import "bootstrap/progress-bars";
+@import "bootstrap/media";
+@import "bootstrap/list-group";
+@import "bootstrap/panels";
+@import "bootstrap/responsive-embed";
+@import "bootstrap/wells";
+@import "bootstrap/close";
+
+// Components w/ JavaScript
+@import "bootstrap/modals";
+@import "bootstrap/tooltip";
+@import "bootstrap/popovers";
+@import "bootstrap/carousel";
+
+// Utility classes
+@import "bootstrap/utilities";
+@import "bootstrap/responsive-utilities";
+// @end Include bootstrap
 // -----------------
 
 // Setup 
@@ -28,6 +73,7 @@
 @import 'redesign/components/slider';
 @import 'redesign/components/timer-box';
 @import 'redesign/components/rhombus';
+@import 'redesign/components/buttons';
 @import 'redesign/components/cart';
 @import 'redesign/facebook';
 // @end Components
@@ -135,11 +181,6 @@
        border:2px solid white;
     }
   }
-}
-
-.btn-secondary {
-  background-color:#033649;
-  color:#FFFFFF;
 }
 
 h1.edit-title {
