--- a/app/assets/stylesheets/redesign/components/_cart.scss
+++ b/app/assets/stylesheets/redesign/components/_cart.scss
@@ -129,10 +129,10 @@
 
 .cart--call-to-actions {
   padding: 1em;
-  .btn {
-    padding: 10px 12px 6px 12px;
-    font-family: $font-family-secondary;
-  }
+  // .btn {
+  //   padding: 10px 12px 6px 12px;
+  //   font-family: $font-family-secondary;
+  // }
 }
 
 .cart-total {
