--- a/app/assets/stylesheets/redesign/helpers/_helpers.css.scss
+++ b/app/assets/stylesheets/redesign/helpers/_helpers.css.scss
@@ -74,3 +74,29 @@
 } 
 // @end Overlay
 // -----------------
+
+// Title with line
+.decorated {
+  overflow: hidden;
+  text-align: center;
+}
+.decorated > span {
+    position: relative;
+    display: inline-block;
+}
+.decorated > span:before, .decorated > span:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  border-bottom: 2px solid;
+  width: 591px; /* half of limiter*/
+  margin: 0 20px;
+}
+.decorated > span:before{
+  right: 100%;
+}
+.decorated > span:after{
+  left: 100%;
+}
+// @end Title with line
+// -----------------
