--- a/app/assets/stylesheets/redesign/layout/_base.css.scss
+++ b/app/assets/stylesheets/redesign/layout/_base.css.scss
@@ -1,10 +1,10 @@
-body {
-  font-family: $font-family-secondary;
-}
+// body {
+//   font-family: $font-family-secondary;
+// }
 
 a:hover { color: $fp-highlight;}
 
-a:focus { text-decoration: none;}
+a:hover, a:focus { text-decoration: none;}
 
 a:active, a:focus { outline: none !important; }
 
