--- a/app/assets/stylesheets/redesign/styleguide/_overrides.scss
+++ b/app/assets/stylesheets/redesign/styleguide/_overrides.scss
@@ -5,13 +5,13 @@
 // body {
 // 	height: 100%;
 // }
-.btn {
-	text-transform: uppercase;
-	padding: 10px 40px;
-	font-weight: 400;
-	letter-spacing: 1px;
-	max-width: 100%;
-}
+// .btn {
+// 	text-transform: uppercase;
+// 	padding: 10px 40px;
+// 	font-weight: 400;
+// 	letter-spacing: 1px;
+// 	max-width: 100%;
+// }
 
 // .well {
 // 	box-shadow: none;
@@ -70,10 +70,10 @@
 	border: 1px solid $gray-lightish;
 }
 
-label {
-	font-weight: normal;
-	font-family: $headings-font-family;
-	text-transform: uppercase;
-	font-size: 0.9em;
-	color: $gray-light;
-}
+// label {
+// 	font-weight: normal;
+// 	font-family: $headings-font-family;
+// 	text-transform: uppercase;
+// 	font-size: 0.9em;
+// 	color: $gray-light;
+// }
