--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -117,7 +117,7 @@ ruby:
                       = form_tag search_path, method: :get do
                         input.form-control id='input-search' name='q' placeholder=("Search here...") type="text"
                         span
-                          button.invis-fix Enter
+                          button.btn-transparent Enter
 
           li#cart-trigger.menu-item
             = link_to spree.checkout_path, class: 'menu-item--link' do
