--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -65,11 +65,11 @@
         .row.row-inline.text-center
           .col-sm-5.col-inline.full-form
             - if promocode == 'birthdaybabe'
-              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode)), class: 'btn btn-facebook btn-block btn-md'
+              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode)), class: 'btn btn-facebook'
             - elsif campaign_uuid == 'auto_apply_promo'
               = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true), class: 'btn btn-facebook btn-block btn-md'
             - else
-              = link_to 'Redeem via Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-md'
+              = link_to 'Redeem via Facebook', fb_auth_path, class: 'btn btn-facebook'
 
           .col-sm-2.col-inline.full-form
             .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
@@ -77,7 +77,7 @@
             .input-group
               input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
               span.input-group-addon
-                input.btn-plain.btn-reset type="submit" value="Send"
+                input.btn-plain.btn-transparent type="submit" value="Send"
 
   - else # default, support legacy
     #modal-popup-content-template.hidden
