--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -27,7 +27,7 @@
       .col-md-6.form-group
         = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
       .col-md-6.form-group
-        = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-black btn-md fb-login'
+        = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block fb-login'
       .col-md-12.form-group
         p
           | An account lets you track your order, manage your personal details and get access to great members-only offers.
