Rename checkout layout, wrap page in container

--- a/app/views/layouts/redesign/checkout.html.slim
+++ b/app/views/layouts/redesign/checkout.html.slim
@@ -17,7 +17,8 @@ doctype html
 
     = render 'layouts/redesign/logo'
 
-    = yield
+    #content-container
+      = yield
 
     = render 'layouts/redesign/footer'
 
