Move Logo files to subdirectory

--- a/app/views/layouts/redesign/_address.html.slim
+++ b/app/views/layouts/redesign/_address.html.slim
@@ -1,7 +1,7 @@
 
 div.address itemscope="" itemtype="http://schema.org/Organization"
     meta itemprop="url" content="http://www.fameandpartners.com/"
-    meta itemprop="logo" content="http://www.fameandpartners.com/assets/new-logo.svg"
+    meta itemprop="logo" content="http://www.fameandpartners.com/assets/logo/new-logo.svg"
     span itemprop="name" Fame & Partners
 
     - if current_site_version.is_australia?
