--- a/app/views/style_quiz/show.html.slim
+++ b/app/views/style_quiz/show.html.slim
@@ -39,7 +39,7 @@ css:
 .quiz-box#style_quiz
   .quiz-header
     = link_to '/' do
-      = image_tag 'new-logo-white.svg', class: 'logo', :alt => 'Fame & Partners'
+      = image_tag 'logo/new-logo-white.svg', class: 'logo', :alt => 'Fame & Partners'
   .quiz-wrapper-box
     .quiz-box-inner
       /uncomment this to show thanks
