--- a/app/views/style_quiz/thanks.html.slim
+++ b/app/views/style_quiz/thanks.html.slim
@@ -4,7 +4,7 @@
   .finish-slide style="overflow: hidden;"
     .header
       = image_tag "_quiz/gurl.png", width: 65
-      = image_tag "images/new-logo.svg", width: 220
+      = image_tag "logo/new-logo.svg", width: 220
     h1 HEY, HERE'S $20 FOR YOU TO SPEND ON THE PERFECT DRESS!
     .secondary
       ' USE:
