--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -79,12 +79,12 @@ ruby:
 
           .masthead.pull-left.hidden-xs
             = link_to root_path
-              = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
+              = image_tag src='logo/new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
 
           .masthead.pull-left.visible-xs
             = link_to root_path do
-              = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
+              = image_tag src='logo/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
           ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
             = render partial: 'layouts/redesign/mega_menu/shop'
