--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -30,7 +30,7 @@ ruby:
 .quiz-box#style_quiz
   .quiz-header
     = link_to '/' do
-      = image_tag 'new-logo-white.svg', class: 'logo', :alt => 'Fame & Partners'
+      = image_tag 'logo/new-logo-white.svg', class: 'logo', :alt => 'Fame & Partners'
   .quiz-wrapper-box
     .quiz-results-wrapper
       .quiz-results
