--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -19,11 +19,11 @@ doctype html
         .container-fluid.nav-menu-container
           .masthead.pull-left.hidden-xs
             = link_to '/', rel: 'nofollow' do
-              = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
+              = image_tag src='logo/new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
           .masthead.pull-left.visible-xs
             = link_to '/', rel: 'nofollow' do
-              = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
+              = image_tag src='logo/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
           ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
             li.shop.menu-item
