--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -1,14 +1,27 @@
 = content_for :inline_javascript do
   | page.initCheckoutEditPage();
 
-.checkout-title.page-title
-  .checkout-title--content.container.text-center
-    h1.checkout-h1 Checkout
-
+- support_telephone = {'us' => '866 527 7797', 'au' => '1300 924 860'}[current_site_version.code]
+= render 'shared/zopim'
 .checkout.page-content
   .container
     .row
       .col-md-8
+        .checkout-masthead
+          h1
+            = image_tag 'logo/logo-mobile.svg', alt: 'logo', title: ''
+            ' Secure checkout
+          ul.support-options.list-inline
+            li.live-chat
+              a href='javascript:$zopim.livechat.window.show()'
+               ' Live Chat
+            li.support-telephone
+             = support_telephone
+        /.checkout-breadcrumbs
+        /  ol.breadcrumb
+        /    li Your information
+        /    li Payment Method
+
         .checkout-step data-name="address"
           = render 'address_step', current_step: current_step
 
