Add masthead to checkout

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -42,6 +42,7 @@
 @import 'redesign/tables';
 
 @import 'redesign/checkout';
+@import 'redesign/checkout_v2';
 @import 'redesign/cart';
 
 // Time specific content
