--- a/app/views/checkout/v1/spree/checkout/_address_form.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_form.html.slim
@@ -77,7 +77,7 @@ ruby:
 
 .row
   .col-md-6.form-group
-    = form.label :phone, with_required_mark(t(:phone))
+    = form.label :phone, with_required_mark(t(:phone_number))
     = form.phone_field :phone, class: 'required form-control form-control-md', required: 'required'
 
   .col-md-6.form-group
