--- a/app/views/checkout/v1/spree/checkout/_address_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_step.html.slim
@@ -2,14 +2,13 @@
   | window.bill_address = #{ raw ::AddressSerializer.new(current_order.bill_address).to_json };
 
 - if current_step.eql?('address')
-
+  h2.checkout-section-title 1. Your information
+  p Where should we send your receipt and tracking details?
   - if signed_in?
-    h2.checkout-section-title 1. Log In
     p
       ' Currently logged in as
       strong= current_spree_user.email
   - else
-    h2.checkout-section-title 1. Log In if you have an account
     .auth-alert.alert-dismissible.fade.in.alert-danger
       button type="button" class="close" data-dismiss="alert" aria-label="Close" x
       h3.alert-danger
@@ -33,15 +32,14 @@
 
     = hidden_field_tag :create_account, :value => true
 
-    h2.checkout-section-title 2. Billing Address
-    / br
+    h2.checkout-section-title 2. Shipping Details
     .form-wrapper data-hook='billing_inner'
       = form.fields_for :bill_address do |bill_form|
         = render partial: 'spree/checkout/address_form', locals: {form: bill_form, address_type: 'billing', address: @order.bill_address}
 
     .row
       .col-md-12.form-group
-        = form.label :customer_notes
+        = form.label :customer_notes, 'Comments or special instructions'
         = form.text_field :customer_notes, class: 'required form-control form-control-md'
 
     .row
