--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -21,7 +21,7 @@ $checkout-form-border-color-active:   #000000;
 
 .checkout.page-content {
   .checkout-masthead {
-    margin-top: 40px;
+    margin: 40px 0;
     vertical-align: middle;
     line-height: 60px;
 
@@ -34,9 +34,10 @@ $checkout-form-border-color-active:   #000000;
       font-size: 30px;
       font-family:$font-family-secondary;
 
-      img.logo {
+      img {
         display: inline-block;
         line-height: 60px;
+        margin-right: 30px;
       }
     }
 
