--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -9,7 +9,8 @@
       .col-md-8
         .checkout-masthead
           h1
-            = image_tag 'logo/logo-mobile.svg', alt: 'logo', title: '', width: '78', height: '59'
+            = link_to root_path
+              = image_tag 'logo/logo-mobile.svg', alt: 'Fame & Partners', width: '78', height: '59'
             ' Secure checkout
           ul.support-options.list-inline
             li.live-chat
