--- a/app/views/checkout/v1/spree/checkout/_address_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_step.html.slim
@@ -2,31 +2,7 @@
   | window.bill_address = #{ raw ::AddressSerializer.new(current_order.bill_address).to_json };
 
 - if current_step.eql?('address')
-  h2.checkout-section-title 1. Your information
-  p Where should we send your receipt and tracking details?
-  - if signed_in?
-    p
-      ' Currently logged in as
-      strong= current_spree_user.email
-  - else
-    .auth-alert.alert-dismissible.fade.in.alert-danger
-      button type="button" class="close" data-dismiss="alert" aria-label="Close" x
-      h3.alert-danger
-        | Invalid email or password
-    .row
-      .col-md-6.form-group
-        label
-          | Email address *
-        = text_field_tag 'email', nil, class: 'form-control form-control-md'
-      .col-md-6.form-group
-        label
-          | Password *
-        = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
-    .row
-      .col-md-6.form-group
-        = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
-      .col-md-6.form-group
-        = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-black btn-md fb-login'
+  = render partial: 'email_login'
   = form_for @order, url: update_checkout_path(current_step), html: {class: 'form-global checkout-form'}, remote: false do |form|
     = render :partial => 'shared/error_messages', locals: { target: @order }
 
