[fix] remove dresses from megamenu (once again)

--- a/app/views/layouts/redesign/_color.html.slim
+++ b/app/views/layouts/redesign/_color.html.slim
@@ -1,6 +1,6 @@
-li.mega-menu-list--item= link_to 'Black Dresses'         , colour_path('Black')
-li.mega-menu-list--item= link_to 'White / Ivory Dresses' , colour_path('White')
-li.mega-menu-list--item= link_to 'Blue Dresses'          , colour_path('Blue')
-li.mega-menu-list--item= link_to 'Pink Dresses'          , colour_path('Pink')
-li.mega-menu-list--item= link_to 'Red Dresses'           , colour_path('Red')
-li.mega-menu-list--item= link_to 'Pastel Dresses'        , colour_path('Pastel')
+li.mega-menu-list--item= link_to 'Black'        , colour_path('Black')
+li.mega-menu-list--item= link_to 'White / Ivory', colour_path('White')
+li.mega-menu-list--item= link_to 'Blue'         , colour_path('Blue')
+li.mega-menu-list--item= link_to 'Pink'         , colour_path('Pink')
+li.mega-menu-list--item= link_to 'Red'          , colour_path('Red')
+li.mega-menu-list--item= link_to 'Pastel'       , colour_path('Pastel')
