--- a/app/views/layouts/redesign/_style.html.slim
+++ b/app/views/layouts/redesign/_style.html.slim
@@ -1,8 +1,8 @@
-li.mega-menu-list--item= link_to 'Plus Size Dresses'    , build_taxon_path('Plus Size')
-li.mega-menu-list--item= link_to 'Two-Piece Dresses'    , build_taxon_path('Two Piece')
-li.mega-menu-list--item= link_to 'One Shoulder Dresses' , build_taxon_path('One-Shoulder')
-li.mega-menu-list--item= link_to 'Strapless Dresses'    , build_taxon_path('Strapless')
-li.mega-menu-list--item= link_to 'V-Neck Dresses'       , build_taxon_path('V-Neck')
-li.mega-menu-list--item= link_to 'Split Dresses'        , build_taxon_path('Split')
-li.mega-menu-list--item= link_to 'Backless Dresses'     , build_taxon_path('Backless')
-li.mega-menu-list--item= link_to 'Lace Dresses'         , build_taxon_path('Lace')
+li.mega-menu-list--item= link_to 'Plus Size'   , build_taxon_path('Plus Size')
+li.mega-menu-list--item= link_to 'Two-Piece'   , build_taxon_path('Two Piece')
+li.mega-menu-list--item= link_to 'One Shoulder', build_taxon_path('One-Shoulder')
+li.mega-menu-list--item= link_to 'Strapless'   , build_taxon_path('Strapless')
+li.mega-menu-list--item= link_to 'V-Neck'      , build_taxon_path('V-Neck')
+li.mega-menu-list--item= link_to 'Split'       , build_taxon_path('Split')
+li.mega-menu-list--item= link_to 'Backless'    , build_taxon_path('Backless')
+li.mega-menu-list--item= link_to 'Lace'        , build_taxon_path('Lace')
