--- a/app/views/checkout/v1/spree/checkout/_email_login.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_email_login.html.slim
@@ -14,12 +14,12 @@ p Where should we send your receipt and tracking details?
       label
         | Email address *
       = text_field_tag 'email', nil, class: 'form-control form-control-md'
-    .col-md-6.form-group
       label
         | Password *
       = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
-  .row
-    .col-md-6.form-group
+      br
       = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
     .col-md-6.form-group
-      = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-black btn-md fb-login'
+      ' or
+      label.invisible Facebook
+      = link_to 'Sign in with Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-md fb-login'
