--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -20,9 +20,9 @@
              = support_telephone
 
         .checkout-breadcrumbs
-          ol.list-inline
-            li.active Your information
-            li Payment Method
+          ol.breadcrumb
+            li class=('active' if current_step.eql?('address')) Your information
+            li class=('active' if current_step.eql?('payment')) Payment Method
 
         .checkout-step data-name="address"
           = render 'address_step', current_step: current_step
