--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -100,6 +100,21 @@ $checkout-info-peach: #ddb099;
       }
     }
 
+    .passwordArea{
+      width:100%;
+    }
 
+    #password{
+      float: left;
+      width: 65%;
+    }
+
+    #login{
+      background-color: black;
+      color: white;
+      float: left;
+      width: 35%;
+      text-align: center;
+    }
   }
 }
