--- a/app/views/checkout/v1/spree/checkout/_email_login.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_email_login.html.slim
@@ -14,11 +14,11 @@ p Where should we send your receipt and tracking details?
       label
         | Email address *
       = text_field_tag 'email', nil, class: 'form-control form-control-md'
-      label Password *
-      .input-group
+      label#passwordLabel.hidden Password *
+      .input-group.hidden.passwordArea
         = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
-        span.input-group-btn
-          = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
+        .form-control-md#login
+          | LOGIN
 
     .col-md-6.form-group
       ' or
