[fix] fix account dropdown position when locale warn is shown

--- a/app/assets/stylesheets/redesign/header/locale_warn.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_warn.css.scss
@@ -109,4 +109,9 @@ $color-white: #FFF;
   .mega-menu {
     top: $mega-menu-desktop-height + $locale-warn-desktop-height;
   }
+
+  // Account drop-down
+  .account {
+    top: -83px;
+  }
 }
