--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -115,6 +115,7 @@ $checkout-info-peach: #ddb099;
       float: left;
       width: 35%;
       text-align: center;
+      cursor: pointer;
     }
   }
 }
