Update icomoon font for 2015 with new icons

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -10,6 +10,7 @@
 @import 'redesign/extras/tabs';
 
 @import 'redesign/icons';
+@import 'libs/icomoon_fame_2015/icons';
 
 @import 'redesign/layout';
 @import 'redesign/header';
