--- a/app/assets/stylesheets/redesign/extras/_tabs.css.scss
+++ b/app/assets/stylesheets/redesign/extras/_tabs.css.scss
@@ -38,7 +38,7 @@
       height: 90px;
       text-align: center;
       padding: 10px 13.5px;
-
+      font-size: 15px;
       &:hover {
         background-color: $gray-light-bg;
       }
