--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -184,8 +184,7 @@ ruby:
         h4 Fabric & Trims
         - if @product.fabric.present?
           = simple_format(@product.fabric)
-          br
-        Product may have variations in dying hues so product may look slightly different from image
+        | Product may have variations in dying hues so product may look slightly different from image
 
       h4 Care Instructions
       p
