Use new icons, add .icon class for Sass extensions

--- a/app/assets/stylesheets/libs/icomoon_fame_2015/_icons.css.scss
+++ b/app/assets/stylesheets/libs/icomoon_fame_2015/_icons.css.scss
@@ -28,7 +28,7 @@
 	font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"], .icon {
 	font-family: 'icomoon_fame_2015';
 	speak: none;
 	font-style: normal;
