Add lock icon to checkout pay now button

--- a/app/views/checkout/v1/spree/checkout/_address_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_step.html.slim
@@ -37,8 +37,7 @@
     .row
       .col-md-6.form-group
         button.btn.btn-block.btn-md.btn-black data-loading='Saving...'
-          / TODO - Replace with correct Icon
-          i.icon.icon-square
+          i.icon.icon-lock
           ' Pay Securely
 
 
